styles.css
html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

html, body {
	margin: 0;
}

/* fonts */
h1 {
	color: white;
	font-family: 'League Spartan', 'Open Sans', sans-serif;
	font-size: 138px;
	font-weight: 600;
	margin: 100px 0 20px;
	white-space: nowrap;
}
h2, h3 {
	font-family: 'Open Sans', sans-serif;
	font-weight: 400;
	margin: 0;
	position: relative;
	color: #d44619;
	font-size: 30px;
}
h2:before, h3:before {
	content: '/';
	position: absolute;
	left: -25px;
	color: #1d7fa8;
}
p {
	color: #333;
	font-family: 'Open Sans', sans-serif;
	font-weight: 400;
	font-size: 16px;
	line-height: 24px;
}
a {
	font-size: 16px;
	font-family: 'Open Sans', sans-serif;
	color: #1d7fa8;
	text-decoration: none;
}
a:hover, a:focus, a:active {
	text-decoration: underline;
}

/* header */
header {
	background: #1d7fa8 url(assets/header_background.png);
	background-repeat: no-repeat;
	background-position: top center;
	text-align: center;
}
.logoContainer {
	border-bottom: 3px solid #60A4C5;
	padding: 15px;
	text-align: left;	
}
.logoContainer img {
	position: relative;
    left: 17%;
}
header .text-wrapper {
	width: 63%;
	text-align: left;
	margin: 0 auto;
}
header p {
	color: white;
	font-family: 'Open Sans', sans-serif;
	font-size: 48px;
	font-weight: 600;
	margin: 0 auto;
	line-height: 60px;
}
header p.location {
	font-weight: 100;
}
header p.subtitle {
	font-size: 24px;
	padding: 60px 0 100px;
	font-weight: 400;
}

/* sections */
section {
	padding: 40px;
}
section .textWrapper {
	width: 60%;
	margin: 0 auto;
}

.event {
	background: #EDF5F8;
}

.travel h3 {
	padding-bottom: 30px;
}
.partners {
	padding-top: 0;
}

section p span {
	font-size: 20px;
	font-weight: 600;
}
ul {
	list-style: none;
	padding: 0;
}
li {
	font-size: 20px;
	font-weight: 600;
	border-bottom: 2px solid #ccc;
	color: #333;
	font-family: 'Open Sans', sans-serif;
	font-weight: 400;
	line-height: 58px;
}

.logos {
	display: flex;
    width: 100%;
    justify-content: space-around;
}
.logo {
	width: 100%;
	position: relative;
	top: 50%;
	transform: translateY(-50%);
}

/* footer */
footer {
	background: #f5f5f5;
}
footer p {
	color: #666;
    margin: 0;
    padding: 10px 0 30px;
    position: relative;
    left: 17%;
    display: inline-block;
}

